--- a/public/confirm.html
+++ b/public/confirm.html
@@ -30,6 +30,7 @@
 
       const msg = await res.text();
       document.getElementById('mensagem').textContent = msg;
+      window.location.href = '/login.html';
     });
   </script>
 </body>
