Forçando envio de todos os arquivos

--- a/public/gastos.html
+++ b/public/gastos.html
@@ -26,6 +26,19 @@
     <input type="text" id="descricao" placeholder="Descrição" required />
     <input type="number" id="valor" placeholder="Valor" step="0.01" required />
     <input type="date" id="data" required />
+    
+    <!-- CATEGORIA -->
+    <select id="categoria" required>
+      <option value="">Selecione a categoria</option>
+      <option value="Alimentação">Alimentação</option>
+      <option value="Transporte">Transporte</option>
+      <option value="Moradia">Moradia</option>
+      <option value="Saúde">Saúde</option>
+      <option value="Educação">Educação</option>
+      <option value="Lazer">Lazer</option>
+      <option value="Outros">Outros</option>
+    </select>
+
     <button type="submit">Adicionar</button>
   </form>
 
@@ -35,3 +48,4 @@
   <script src="./scripts/gastos.js"></script>
 </body>
 </html>
+
