outro commit insano

--- a/public/gastos.html
+++ b/public/gastos.html
@@ -48,5 +48,11 @@
   <ul id="lista-gastos"></ul>
 
   <script src="./scripts/gastos.js"></script>
+
+
+  <h3><button onclick="window.location.href='http://localhost:3000/menu-conta.html'">opções</button></h3>
+
+
+
 </body>
 </html>
