--- a/public/login.html
+++ b/public/login.html
@@ -14,6 +14,7 @@
     <input type="password" id="senha" required>
 
     <button type="submit">Entrar</button>
+    
   </form>
 
   <script>
@@ -49,6 +50,16 @@
       }
     });
   </script>
+  <H1></H1>
+
+  <label for="">Não possui uma conta?</label>
+  
+    <button onclick="window.location.href='http://localhost:3000/register.html'">Cadastre-se</button>
+  
+  <label for="">Esqueceu sua senha?</label>
+  
+    <button onclick="window.location.href='http://localhost:3000/recuperar-senha.html'">Recuperar senha</button>  
+
 </body>
 </html>
 
