backend completo, eu acho

--- a/public/gastos.html
+++ b/public/gastos.html
@@ -49,6 +49,8 @@
 
   <script src="./scripts/gastos.js"></script>
 
+  <button id="btn-relatorio">Baixar Relatório em PDF</button>
+
 
   <h3><button onclick="window.location.href='http://localhost:3000/menu-conta.html'">opções</button></h3>
 
