--- a/public/menu-conta.html
+++ b/public/menu-conta.html
@@ -10,6 +10,7 @@
   <li><button onclick="location.href='recuperar-senha.html'">Recuperar Senha</button></li>
   <li><button onclick="excluirConta()">Excluir Conta</button></li>
   <li><button onclick="location.href='login.html'">Sair da conta</button></li>
+  <li><button onclick="location.href='gastos.html'">voltar</button></li>
 </ul>
 
 
